# reduce-workspace-recipe

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
test-data/recipes/: recipe-bar-reduced.json
