[package]
name = "cargo-reduce-recipe"
version = "0.1.0"
edition = "2024"
authors = ["preiter <phil.reiter93@gmail.com>"]
repository = "https://github.com/preiter93/cargo-reduce-recipe"
readme = "README.md"
license = "MIT"
keywords = ["cargo-chef", "chef", "workspace", "recipe"]
description = "Reduce a cargo chef workspace recipe by removing unused workspace members."

[[bin]]
name = "cargo-reduce-recipe"
path = "src/main.rs"

[lib]
name = "reduce_recipe"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
cargo-chef = "0.1"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
toml_edit = { version = "0.23", features = ["serde"] }
clap = "4"
